# Auth-Service

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  k8.yaml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: api_creation_guide.md  architecture.md  docker.md
proto/contracts/: test.proto
src/: lib.rs  main.rs
src/config/: env.rs  logger.rs  mod.rs  swagger.rs
src/dto/: mod.rs
src/grpc/: mod.rs
src/grpc/implementation/: mod.rs  test_impl.rs
src/grpc/traits/: test.rs
src/middleware/: mod.rs
src/services/: mod.rs
