[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web Framework
actix-web = "4.5"
actix-cors = "0.7"

# Async Runtime
tokio = { version = "1.36", features = ["full"] }

# gRPC
tonic = "0.11"
prost = "0.12"

# Database / ORM
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono", "uuid"] }
r2d2 = "0.8"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
log = "0.4"

fern = { version = "0.6", features = ["colored"] }
# env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["serde", "v4"] }
jsonwebtoken = "9.2"
bcrypt = "0.15"
async-trait = "0.1"
humantime = "2.1"

# Documentation
utoipa = { version = "4.2", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["actix-web"] }

[build-dependencies]
tonic-build = "0.11"

